--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "author": "Hwan Ho Lee",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "express": "^4.17.1"
+  },
+  
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
+
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js --delay 2"
   }
 }
